Reorganize project folder structure. Add MongoDBRentals stub

--- a/LameScooter/LameScooter.csproj
+++ b/LameScooter/LameScooter.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="scooters.json">
+    <None Update="Data\scooters.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="scooters.txt">
+    <None Update="Data\scooters.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
