--- a/LameScooter/LameScooter.csproj
+++ b/LameScooter/LameScooter.csproj
@@ -14,4 +14,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.13.0-beta1" />
+  </ItemGroup>
+
 </Project>
