--- a/LameScooter/LameScooter.csproj
+++ b/LameScooter/LameScooter.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>97403e39-fa34-4e81-bedf-d1ab08b3ccf8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="microsoft.extensions.configuration.usersecrets" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0-beta1" />
   </ItemGroup>
 
